--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
     background-color: #fceae8;
 }
 button{
-    background-color: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
+    background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
+    color: white;
     border: none;
-    color: #FF136F;
     border-radius: 8px;
     padding: 9px 25px;
 }
 .watch{
-    background-color: #ffa500;
+    background-image: linear-gradient(152.07deg, #FF9C35 1.47%, #FFD019 97.17%);
     color: white;
     border-radius: 8px;
     padding: 10px 30px;
@@ -18,7 +18,7 @@ button{
 
 }
 .bag{
-    background-color: orchid;
+    background-image: linear-gradient(180deg, #FF589B -0.01%, #FF136F 99.99%);
     color: white;
     border-radius: 8px;
     padding: 10px 30px;
@@ -26,7 +26,7 @@ button{
     width: 359px;
 }
 .shoe{
-    background-color: blue;
+    background-image: linear-gradient(170.41deg, #4289FF -10.89%, #3F07F8 92.77%);
     color: white;
     border-radius: 8px;
     padding: 10px 30px;
@@ -37,6 +37,6 @@ button{
 
 
 .oi{
-    background-color: linear-gradient(to bottom, #FF589B, #FF1367);
+    background-image: linear-gradient(to bottom, #FF589B, #FF1367);
     color: white;
 }
