--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .header-bg-color{
     background-color: #fceae8;
 }
+.price{
+    color: #FF136F;
+}
 button{
     background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
     color: white;
@@ -8,6 +11,9 @@ button{
     border-radius: 8px;
     padding: 9px 25px;
 }
+
+/* ------------------
+--Categories------------- */
 .watch{
     background-image: linear-gradient(152.07deg, #FF9C35 1.47%, #FFD019 97.17%);
     color: white;
@@ -35,8 +41,4 @@ button{
     
 }
 
-
-.oi{
-    background-image: linear-gradient(to bottom, #FF589B, #FF1367);
-    color: white;
-}
+ 
